# Back-end

./: README.md  manage.py  pyproject.toml  requirements.txt
heiwa/: admin.py  apimercadopago.py  models.py  serializers.py  views.py
heiwa/migrations/: 0001_initial.py  0002_mesa_alter_order_mesa.py  0002_mesa_mesanumber.py  0002_rename_orders_order.py  0003_alter_order_mesa.py  0003_remove_mesa_numeromesa.py  0004_merge_20241212_1046.py  0005_alter_user_options_alter_user_managers_and_more.py  0006_remove_user_is_staff_user_username.py
heiwa/templates/: compracerta.html  homepage.html
heiwaBackend/: asgi.py  settings.py  urls.py  wsgi.py
