[project]
name = "Back-end"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "marcoperuzzocmd", email = "marcoantperuzzo@gmail.com"},
]
dependencies = ["django>=5.1.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
